fixed z-index issue on the image scaling

--- a/styles/sass/_main.scss
+++ b/styles/sass/_main.scss
@@ -88,7 +88,6 @@
     border: 2px dashed white;
     border-radius: 1vw;
     margin: 1%;
-    z-index: 1;
 }
 
 .deck {
@@ -123,6 +122,7 @@
 .cardFront {
     position: relative;
     top: -100%;
+    z-index: 0;
 }
 
 .cardFront:hover,
