--- a/styles/sass/styles.css
+++ b/styles/sass/styles.css
@@ -643,7 +643,6 @@ canvas {
   border: 2px dashed white;
   border-radius: 1vw;
   margin: 1%;
-  z-index: 1;
 }
 
 .deck {
@@ -680,6 +679,7 @@ canvas {
 .cardFront {
   position: relative;
   top: -100%;
+  z-index: 0;
 }
 
 .cardFront:hover,
